# prism-rag

./: .env.example  .envrc  .gitignore  02 images.sql  ARCHITECTURE.md  LICENSE  Plan.md  README.md  docker-compose.yml  init.sql  init_test.ipynb  pyproject.toml  requirements.txt  trader_vllm_report.json
agents/ingestion/: captioner.py  chunker.py  config.py  db.py  embed_leaves.py  encoder.py  loader.py
agents/retrieval/: Dockerfile  __init__.py  main.py  parent_child.py  tree_search.py
agents/tree_builder/: build.py  cluster.py  summarizer.py
checkpoints/: model_download.txt
data/: download.py  manifest.json
docs/: make_dataflow_gif.py
evaluation/: awq_inspection_log.jsonl
finetune_models/: awq_quantize_law_worker.py
scripts/: 00_db_up.sh  01_init_db.py  02_ingest.py  02_ingest_and_build.py  03_embed_chunks.py  04_build_tree.py  05_query_cli.py
training/: awq_quantize_coder_worker.py  awq_quantize_law_worker.py  awq_quantize_trader_worker.py  awq_quantize_vision_worker.py  qwen_coder_fine_tune.py  qwen_trader_SFT_fine_tune.py
wandb/: latest-run
wandb/run-20260603_172847-tyvn7zpi/: run-tyvn7zpi.wandb
wandb/run-20260603_172847-tyvn7zpi/files/: config.yaml  wandb-metadata.json
wandb/run-20260603_173459-5v56k9n5/: run-5v56k9n5.wandb
wandb/run-20260603_173459-5v56k9n5/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260603_174038-n8a099cy/: run-n8a099cy.wandb
wandb/run-20260603_174038-n8a099cy/files/: config.yaml  wandb-metadata.json
wandb/run-20260603_174418-n6km6w3i/: run-n6km6w3i.wandb
wandb/run-20260603_174418-n6km6w3i/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260603_181336-6nah72ip/: run-6nah72ip.wandb
wandb/run-20260603_181336-6nah72ip/files/: config.yaml  requirements.txt  (+2 more)
wandb/run-20260607_175043-yzcoqgdh/: run-yzcoqgdh.wandb
wandb/run-20260607_175309-km48robs/: run-km48robs.wandb
wandb/run-20260607_175515-je6b3o8t/: run-je6b3o8t.wandb
(+7 files in other folders)
