[project]
name = "prism-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "flagembedding>=1.2",
    "hdbscan>=0.8.33",
    "llmcompressor>=0.6.0.1",
    "numpy<2.0",
    "openai>=1.40",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.3",
    "transformers<5.0",
    "umap-learn>=0.5.5",
    "uvicorn[standard]>=0.27",
    "vllm>=0.9.2",
]
